fix layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,7 +2,8 @@ input, select, textarea {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
 
   padding: .75rem 1rem;
   font: var(--text);
@@ -22,7 +23,7 @@ textarea:focus,
 /* se algum elemento dentro do date estiver com focus */
 input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-hightlight);
+  border-color: var(--stroke-hightlight);
   /* hack safari para exibir borda */
   outline-offset: .1px;
 }
